--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^5.0.7",
     "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
